# chords

./: .gitignore  LICENSE  README.md  README_text_formatting.md  dev.sh  fountain.css  index.html  jbake.properties  jest.config.mjs  main.py  mise.toml  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  publish.sh  pyproject.toml  requirements.txt  setup.py  tsconfig.json  u.md.html
.github/workflows/: jbake-pages.yml
.theia/: settings.json
__target__/: main.js  main.project
assets/bpms/: .6-8_1-4_85.mscx,  6-8_1-4_85.mscx
assets/css/: base-screen.css  base.css  bulmaswatch.css  chordictionary.css
assets/js/: chords.js
chordapp/: README.md  angular.json  package.json  pnpm-lock.yaml  tsconfig.json
chordapp/src/: index.html  manifest.webmanifest
chords/: __main__.py  chords.py  chordsmd.py  text_formatting.py  utils.py
content/: about.adoc  about.md  batidas.adoc  dictionary.adoc  dictionary.md  lyrics.adoc  repertorio.adoc  repertorio.md  setlists.adoc  setlists.md
content/chords/: imaginacao.adoc  imaginacao_desconhecido.adoc  lado-a-lado_hinario-adventista-2022.adoc  nao-ha-o-que-temer_adoradores-novo-tempo.adoc  retrovisor.adoc  sede_jeferson-pillar.adoc  teu-santo-nome_adoradores-novo-tempo.adoc  toma-meu-coracao.adoc  toma-meu-coracao_prisma-brasil.adoc
docs/: .meta.yml  about.html  archive.html  batidas.html  dictionary.html  feed.xml  index.html  repertorio.html  setlists.html  sitemap.xml
templates/: chords.thyme  footer.thyme  header.thyme  index.thyme  layout.thyme  lyrics.thyme  menu.thyme  repertoire.thyme  setlist.thyme
test/: conftest.py  test_chords.py  test_fountain.py  test_text_formatting.py  utils.py
tests/: test_fountain.fountain  test_fountain.py  test_text_formatting.py  utils.py
tmp/: index.html
(+474 files in other folders)
