[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "giflwmd"
version = "0.0.4"
authors = [
  { name="Guilherme Weizenmann", email="g.weizenmann@gmail.com" },
]
description = "Fountain and text formating based on AsciiDoc extension for python markdown"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-2-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/giflw/chords/tree/py-chords"
Issues = "https://github.com/giflw/chords/issues"