[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

#[tool.hatch.metadata]
#allow-direct-references = true

[project]
name = "widemd"
version = "0.0.4"
authors = [
  { name="Guilherme Weizenmann", email="g.weizenmann@gmail.com" },
]
description = "Wide Markdown: Fountain and text formating based on AsciiDoc extension for python markdown"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-2-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "markdown >= 3.10",
    "rich==14.1.0",
    "regex==2025.10.23"
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-html-plus==0.4.2",
    "pytest-cov==7.0.0",
    "livereload==2.7.1"
]

#[project.scripts]
# FIXME add main_cli entrypoint function
#gwmd = "giflwmd:main_cli"

[project.urls]
Homepage = "https://github.com/giflw/chords/tree/py-chords"
Issues = "https://github.com/giflw/chords/issues"